Add functionality to inject detection error.

--- a/industrial_extrinsic_cal/cfg/circle_grid_finder.cfg
+++ b/industrial_extrinsic_cal/cfg/circle_grid_finder.cfg
@@ -24,5 +24,6 @@ gen.add("min_convexity",         double_t, 0, "The mininum convexity", 0.2, 0.1,
 gen.add("max_convexity",         double_t, 0, "The maximum convexity", 0.99, 0.0, 1.0)
 gen.add("min_inertia_ratio",     double_t, 0, "The minimum inertial ratio", 0.1, 0.0, 1.0)
 gen.add("max_inertia_ratio",     double_t, 0, "The maximum inertial ratio", 0.99, 0.0, 1.0)
+gen.add("random_wobble",         double_t, 0, "Standard deviation for added random detector noise.", 0.0, 0.0, 900.0)
 
 exit(gen.generate(PACKAGE, "industrial_extrinsic_cal_node", "circle_grid_finder"))
